# hip-mfma

./: CMakeLists.txt  Makefile  config.hpp  gemm.cpp  half.h  kernel.cpp  kernel.h  statically_indexed_array.hpp  tuple.hpp  tuple_helper.hpp  type.hpp
